--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "typedoc": "^0.22.3",
     "typescript": "^4.4.3",
     "vite": "^2.5.6"
+  },
+  "dependencies": {
+    "side-effect-manager": "^0.1.5"
   }
 }
