--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,9 +10,22 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Install and Build 🔧
+      - name: Cache pnpm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-
+
+      - name: Install pnpm 🤏🏻
+        uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 6.32.4
+          run_install: true
+
+      - name: Build 🔧
         run: |
-          npm install
-          npm run lint
-          npm run test
-          npm run build
+          pnpm run lint
+          pnpm run test
+          pnpm run build
