--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install pnpm 🤏🏻
         uses: pnpm/action-setup@v2.1.0
         with:
-          version: 6.32.4
+          version: latest
           run_install: true
 
       - name: Build 🔧
