--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "value-enhancer",
-  "version": "1.3.2",
+  "version": "2.0.0-alpha.0",
   "private": false,
   "description": "A tiny library to enhance value with reactive wrapper.",
   "license": "MIT",
