--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prepublish": "pnpm run build",
     "lint": "eslint --ext .ts,.tsx . && prettier --check .",
     "test": "jest --coverage",
-    "docs": "typedoc --includeVersion --excludePrivate --out docs src/value-enhancer.ts",
+    "docs": "typedoc --includeVersion --excludePrivate --out docs src/index.ts",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
     "build": "vite build && npm run types",
     "build:dev": "vite build --mode development && npm run types",
