--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "test": "jest --coverage",
     "docs": "typedoc --cname value-enhancer.js.org --includeVersion --excludePrivate --excludeProtected --excludeInternal --out docs src/index.ts",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
-    "build": "vite build && npm run types",
-    "build:dev": "vite build --mode development && npm run types",
+    "build": "cross-env NODE_ENV=production vite build && npm run types",
+    "build:min": "cross-env NODE_ENV=production MINIFY=true vite build && npm run types",
+    "build:dev": "cross-env NODE_ENV=development vite build --mode development && npm run types",
     "release": "standard-version"
   },
   "devDependencies": {
