--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "CRIMX <straybugs@gmail.com> (https://github.com/crimx/)",
   "repository": "crimx/value-enhancer",
   "sideEffects": false,
-  "main": "./dist/value-enhancer.js",
-  "module": "./dist/value-enhancer.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "src",
@@ -20,24 +20,28 @@
     "test": "jest --coverage",
     "docs": "typedoc --cname value-enhancer.js.org --includeVersion --excludePrivate --excludeProtected --excludeInternal --out docs src/index.ts",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
-    "build": "cross-env NODE_ENV=production vite build && npm run types",
-    "build:min": "cross-env NODE_ENV=production MINIFY=true vite build && npm run types",
-    "build:dev": "cross-env NODE_ENV=development vite build --mode development && npm run types",
+    "build": "cross-env NODE_ENV=production tsup-node src/index.ts && npm run types",
+    "build:min": "cross-env NODE_ENV=production MINIFY=true tsup-node src/index.ts && node scripts/gzip.mjs",
+    "build:dev": "cross-env NODE_ENV=development tsup-node src/index.ts && npm run types",
     "release": "standard-version"
   },
   "devDependencies": {
     "@jest/globals": "^28.1.3",
+    "@types/node": "^18.8.5",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "gzip-size": "^7.0.0",
     "jest": "^28.1.3",
     "prettier": "^2.4.0",
+    "pretty-bytes": "^6.0.0",
     "standard-version": "^9.3.1",
     "ts-jest": "^28.0.8",
+    "tsup": "^6.2.3",
     "typedoc": "^0.23.15",
     "typescript": "^4.4.3",
-    "vite": "^3.0.9"
+    "yoctocolors": "^1.0.0"
   }
 }
