--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test": "jest --coverage",
     "docs": "typedoc --cname value-enhancer.js.org --includeVersion --excludePrivate --excludeProtected --excludeInternal --out docs src/index.ts",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
-    "build": "cross-env NODE_ENV=production tsup-node src/index.ts && npm run types",
+    "build": "cross-env NODE_ENV=production tsup-node src/index.ts",
     "build:min": "cross-env NODE_ENV=production MINIFY=true tsup-node src/index.ts && node scripts/gzip.mjs",
-    "build:dev": "cross-env NODE_ENV=development tsup-node src/index.ts && npm run types",
+    "build:dev": "cross-env NODE_ENV=development tsup-node src/index.ts",
     "release": "standard-version"
   },
   "devDependencies": {
