--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
-    "source.addMissingImports": true
+    "source.addMissingImports": true,
+    "source.organizeImports": true
   },
   "eslint.validate": ["javascript", "javascriptreact", "html", "vue", "svelte"],
   "typescript.tsdk": "node_modules/typescript/lib",
