--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "prepublishOnly": "pnpm run build",
-    "lint": "eslint --ext .ts,.tsx . && prettier --check .",
+    "lint": "eslint --ext .ts,.tsx . && prettier --check . && tsc --noEmit",
     "test": "tsc --noEmit -p ./test/tsconfig.json && jest",
     "docs": "typedoc --options typedoc.json",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
