--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Build 🔧
         run: |
           pnpm run lint
-          pnpm run test
+          pnpm run test:CI
           pnpm run build
