--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "scripts": {
     "prepublishOnly": "pnpm run build",
     "lint": "eslint --ext .ts,.tsx . && prettier --check . && tsc --noEmit",
-    "test": "tsc --noEmit -p ./test/tsconfig.json && jest",
+    "test": "jest",
+    "test:CI": "tsc --noEmit -p ./test/tsconfig.json && jest --collect-coverage",
     "docs": "typedoc --options typedoc.json",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
     "build": "cross-env NODE_ENV=production tsup-node",
