build: simplify tsup bundles

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,6 +12,10 @@
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "value-enhancer": ["src"]
+    }
   }
 }
