--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "test:CI": "tsc --noEmit -p ./test/tsconfig.json && jest --collect-coverage",
     "docs": "typedoc --options typedoc.json",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
-    "build": "cross-env NODE_ENV=production tsup-node",
-    "build:min": "cross-env NODE_ENV=production MINIFY=true tsup-node && node scripts/gzip.mjs",
-    "build:dev": "cross-env NODE_ENV=development tsup-node src/index.ts",
+    "build:index": "tsup --config tsup-config/index.tsup.config.ts",
+    "build:collections": "tsup --config tsup-config/collections.tsup.config.ts",
+    "build": "cross-env NODE_ENV=production pnpm run build:index && cross-env NODE_ENV=production pnpm run build:collections",
+    "build:min": "cross-env NODE_ENV=production MINIFY=true pnpm run build:index && cross-env NODE_ENV=production MINIFY=true pnpm run build:collections && node scripts/gzip.mjs",
     "release": "standard-version"
   },
   "devDependencies": {
