--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,16 @@ jobs:
           version: 8
           run_install: true
 
-      - name: Build 🔧
+      - name: Lint 🧹
         run: |
           pnpm run lint
+
+      - name: Test 🧪
+        run: |
           pnpm run test:CI
+
+      - name: Build 🔧
+        run: |
           pnpm run build
 
       - name: Coveralls
