--- a/package.json
+++ b/package.json
@@ -57,20 +57,20 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@types/node": "^18.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "8.10.0",
     "gzip-size": "^7.0.0",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
     "pretty-bytes": "^6.1.0",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.2",
     "tsup": "^6.6.3",
-    "typedoc": "^0.24.8",
-    "typescript": "^4.9.5",
+    "typedoc": "0.25.13",
+    "typescript": "5.4.5",
     "yoctocolors": "^1.0.0"
   }
 }
