--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "prepublishOnly": "pnpm run build",
     "lint": "eslint --ext .ts,.tsx . && prettier --check . && tsc --noEmit",
-    "test": "node --expose-gc ./node_modules/jest/bin/jest.js",
+    "test": "node --expose-gc ./node_modules/jest/bin/jest.js --runInBand",
     "test:CI": "tsc --noEmit -p ./test/tsconfig.json && node --expose-gc ./node_modules/jest/bin/jest.js --collect-coverage",
     "docs": "typedoc --options typedoc.json",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
