chore: add size limit

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Test 🧪
         run: |
-          pnpm run test:CI
+          pnpm run test:coverage
 
       - name: Build 🔧
         run: |
