--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "@typescript-eslint/eslint-plugin": "7.9.0",
     "@typescript-eslint/parser": "7.9.0",
     "cross-env": "^7.0.3",
-    "eslint-config-prettier": "8.10.0",
     "eslint": "8.56.0",
+    "eslint-config-prettier": "8.10.0",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
     "pretty-bytes": "^6.1.0",
@@ -72,7 +72,7 @@
     "standard-version": "^9.5.0",
     "ts-jest": "^29.1.2",
     "tsup": "^6.6.3",
-    "typedoc": "0.25.13",
+    "typedoc": "^0.25.13",
     "typescript": "5.4.5",
     "yoctocolors": "^1.0.0"
   }
