chore: update to the new package.json format

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "Enhance value with plain and explicit reactive wrapper. Think of it as hook-style signals.",
   "license": "MIT",
   "author": "CRIMX <straybugs@gmail.com> (https://github.com/crimx/)",
-  "repository": "crimx/value-enhancer",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/crimx/value-enhancer.git"
+  },
   "keywords": [
     "observable",
     "react",
