--- a/package.json
+++ b/package.json
@@ -78,5 +78,6 @@
     "typedoc": "^0.25.13",
     "typescript": "5.4.5",
     "yoctocolors": "^1.0.0"
-  }
+  },
+  "packageManager": "pnpm@9.5.0"
 }
