chore: update lint

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,11 @@ version: 2
 updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
+    versioning-strategy: "increase"
     schedule:
       interval: "weekly"
+    groups:
+      dev-deps:
+        dependency-type: "development"
+      prod-deps:
+        dependency-type: "production"
