--- a/package.json
+++ b/package.json
@@ -26,33 +26,34 @@
     "test:coverage": "vitest --coverage",
     "test:ci": "vitest --coverage",
     "build": "tsup",
-    "build:min": "MINIFY=true tsup && node scripts/gzip.mjs",
+    "build:min": "MINIFY=true tsup && echo '' && gzip-size dist/index.mjs dist/index.js",
     "release": "commit-and-tag-version"
   },
-  "keywords": [],
+  "keywords": [
+    "observable",
+    "react",
+    "reactive",
+    "model",
+    "frp",
+    "functional-reactive-programming",
+    "data flow"
+  ],
   "license": "MIT",
   "dependencies": {
     "adaptive-set": "<=0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.10.2",
-    "@vitest/coverage-v8": "^2.1.8",
+    "@types/node": "^22.13.1",
+    "@vitest/coverage-v8": "^3.0.4",
+    "@wopjs/eslint-config": "^0.1.9",
+    "@wopjs/gzip-size": "^0.1.0",
     "commit-and-tag-version": "^12.5.0",
-    "eslint": "^9.17.0",
-    "eslint-config-flat-gitignore": "^0.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import-x": "^4.5.0",
-    "eslint-plugin-perfectionist": "^4.3.0",
-    "gzip-size": "^7.0.0",
+    "eslint": "^9.13.0",
     "jest-extended": "^4.0.2",
-    "prettier": "^3.4.1",
-    "pretty-bytes": "^6.1.1",
-    "tsup": "^8.3.5",
-    "typedoc": "^0.27.5",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1",
-    "vitest": "^2.1.6",
-    "yoctocolors": "^2.1.1"
+    "prettier": "^3.3.3",
+    "tsup": "^8.3.0",
+    "typedoc": "^0.27.2",
+    "typescript": "^5.5.4",
+    "vitest": "^3.0.4"
   }
 }
