--- a/package.json
+++ b/package.json
@@ -50,33 +50,30 @@
     "prepublishOnly": "pnpm run build",
     "lint": "eslint --ext .ts,.tsx . && prettier --check . && tsc --noEmit",
     "lint:fix": "eslint --fix --ext .ts,.tsx . && prettier --write . && tsc --noEmit",
-    "size-limit": "size-limit",
     "test": "node --expose-gc ./node_modules/jest/bin/jest.js --runInBand",
     "test:coverage": "tsc --noEmit -p ./test/tsconfig.json && node --expose-gc ./node_modules/jest/bin/jest.js --collect-coverage",
-    "docs": "typedoc --options typedoc.json",
+    "docs": "typedoc --options typedoc.json && export-size-svg",
     "types": "cross-env NODE_ENV=production tsc --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
     "build:index": "tsup --config tsup-config/index.tsup.config.ts",
     "build:collections": "tsup --config tsup-config/collections.tsup.config.ts",
-    "build": "cross-env NODE_ENV=production pnpm run build:index && cross-env NODE_ENV=production pnpm run build:collections && node scripts/build-umd.mjs && node scripts/size.mjs",
-    "build:min": "cross-env NODE_ENV=production MINIFY=true pnpm run build:index && cross-env NODE_ENV=production MINIFY=true pnpm run build:collections && node scripts/build-umd.mjs && node scripts/size.mjs",
+    "build": "cross-env NODE_ENV=production pnpm run build:index && cross-env NODE_ENV=production pnpm run build:collections && node scripts/build-umd.mjs",
+    "build:min": "cross-env NODE_ENV=production MINIFY=true pnpm run build:index && cross-env NODE_ENV=production MINIFY=true pnpm run build:collections && node scripts/build-umd.mjs",
     "release": "standard-version"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@rollup/plugin-replace": "^5.0.7",
-    "@size-limit/esbuild": "^11.1.4",
-    "@size-limit/file": "^11.1.4",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "7.9.0",
     "@typescript-eslint/parser": "7.9.0",
     "cross-env": "^7.0.3",
     "eslint": "8.56.0",
     "eslint-config-prettier": "8.10.0",
+    "export-size-svg": "^0.0.4",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
     "pretty-bytes": "^6.1.0",
     "rollup": "^3.20.2",
-    "size-limit": "^11.1.4",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.1.2",
     "tsup": "^6.6.3",
